assets/styles/components/_word-list.scss
@use '../variables/variables' as vars;
@use './../mixins/mixins' as mx;

.c-word-list {
	--size-quote-icon: 32px;

	display: grid;
	gap: vars.$spacer * 1.75;
	position: relative;

	&__word {
		--color-background: #{vars.$white-100};

		padding: vars.$spacer;
		background-color: var(--color-background);
		border: 1px solid vars.$grey-100;
		display: flex;
		flex-flow: column wrap;
		box-shadow:
			0 0.5px 0.6px rgb(0 0 0 / 8%),
			0 4px 5px rgb(0 0 0 / 16%);

		&:hover {
			.c-word-list__berlinerisch a {
				--color-text-decoration: var(--grey-100);
			}
		}
	}

	&__header {
		--direction-flex: column;

		display: flex;
		flex-direction: var(--direction-flex);
		flex: 1 1 auto;
		margin: 0;

		@include mx.breakpoint('sm') {
			--direction-flex: row;
		}

		&-wrapper {
			--bottom-border: none;

			border-bottom: var(--bottom-border);
			display: flex;

			&.has-example {
				padding-bottom: vars.$spacer * 1.5;

				--bottom-border: 1px dashed var(--grey-100);
			}
		}
	}

	&__berlinerisch {
		--size-font: 1.5rem;

		font: {
			family: vars.$berlin;
			weight: 700;
			size: var(--size-font);
		}
		text: {
			decoration: underline;
			decoration-style: dashed;
			decoration-thickness: from-font;
			underline-position: from-font;
		}

		transition: 0.3s;
		margin: 0;
		word-break: break-word;

		@include mx.breakpoint('md') {
			--size-font: 3rem;
		}
		@include mx.breakpoint('xlg') {
			--size-font: 4.5rem;
		}

		a {
			--color: var(--blue-200);

			text-decoration-color: var(--color-text-decoration, transparent);
		}
	}

	&__translations {
		--margin: #{vars.$spacer * 0.5} 0 0 0;

		display: flex;
		flex-wrap: wrap;
		margin: var(--margin);
		flex: 1 1;

		@include mx.breakpoint('sm') {
			--margin: 0;
		}
	}

	&__translation {
		--font-size: 1rem;

		display: flex;
		align-items: center;
		font-size: var(--font-size);
		position: relative;
		margin: 0;

		&::before {
			--margin: 0 #{vars.$spacer * 0.5} 0 0;

			content: '᛫';
			margin: var(--margin);

			@include mx.breakpoint('sm') {
				--margin: 0 #{vars.$spacer};
			}
		}

		@include mx.breakpoint('md') {
			--font-size: 1.125rem;
		}
		@include mx.breakpoint('xlg') {
			--font-size: 1.225rem;
		}
	}

	&__examples {
		padding-left: vars.$spacer;

		@include mx.breakpoint('md') {
			--size-font: 1.8rem;
		}

		&-item {
			font-style: italic;
		}

		&-list-item {
			&:not(:last-of-type) {
				margin-bottom: 1rem;
			}
		}
	}

	&__examples,
	&__example {
		--size-font: 1.2rem;

		font-size: var(--size-font);
		flex-basis: 100%;
		margin: calc(var(--size-quote-icon) + #{vars.$spacer * 0.5}) 0 0 0;
		word-break: break-word;

		&-explanation {
			font-size: 1rem;
			margin-top: vars.$spacer * 0.5;
		}
	}

	&__example {
		font-style: italic;

		@include mx.breakpoint('md') {
			--size-font: 1.8rem;
		}

		&-wrapper {
			--gap: #{vars.$spacer * 0.5};
			--padding-y: #{vars.$spacer};
			--padding-x: var(--padding-y);

			display: flex;
			padding: var(--padding-y) var(--padding-x);
			gap: var(--gap);

			@include mx.breakpoint('sm') {
				--gap: #{vars.$spacer};
				--padding-y: #{vars.$spacer * 1.5};
				--padding-x: 5%;
			}
			@include mx.breakpoint('md') {
				--padding-y: #{vars.$spacer * 2.5};
				--padding-x: 10%;
			}
		}
	}

	&__icon-button {
		display: flex;
		justify-content: center;
		align-items: center;
		transition: all 0.3 ease-in-out;

		&.is-hidden {
			display: none;
		}
	}

	&__quote-icon {
		width: var(--size-quote-icon);
		height: var(--size-quote-icon);
		fill: vars.$grey-100;

		@include mx.breakpoint('md') {
			--size-quote-icon: 44px;
		}
	}

	&__copy-button {
		--color-background: #{vars.$white-200};

		gap: vars.$spacer * 0.2;

		&:hover {
			--style-border: solid;
		}

		&.is-success {
			background: var(--success);
			color: #fff;
		}
	}

	.c-word-list--word-option {
		.c-dropdown__menu {
			@include mx.dark-mode-override {
				--color-background: var(--white-200);

				padding: #{vars.$spacer * 0.25};
				display: flex;
				flex-direction: column;
				gap: vars.$spacer * 0.25;
			}
		}
	}
}

